syntax = "proto3";

package abi;

message ImageSpec { repeated Spec specs = 1; }

message Resize {
  uint32 width = 1;
  uint32 height = 2;

  enum ResizeType {
    NORMAL     = 0;
    SEAM_CARVE = 1;
  }

  ResizeType rtype = 3;

  enum SampleFilter {
    UNKNOWN     = 0;
    NEAREST     = 1;
    TRIANGLE    = 2;
    CATMULL_ROM = 3;
    GAUSSIAN    = 4;
    LANCZOS3    = 5;
  }

  SampleFilter filter = 4;
}

message Watermark {
  uint32 x = 1;
  uint32 y = 2;
}

message Fliph {
}

message Flipv {
}

message Filter {
    enum Filter {
        UNKNOWN   = 0;
        FLAGBLUE  = 1;
        LIQUID    = 2;
        TWENTIES  = 3;
    }
    Filter filter = 1;
}

message Spec {
  oneof data {
    Resize resize       = 1;
    Watermark watermark = 2;
    Fliph fliph         = 3;
    Flipv flipv         = 4;
    Filter filter       = 5;
  }
}
